Bug 1123012 - Just return a NULL ptr instead of casting NULL. r=jesup, a=lsblakk